refactor(UserService): update user management methods to use new DTOs and improve validation logic